# rust-axum-api

./: .gitignore  README.md
rusty-cart/: Cargo.toml  start-rusty-cart.ps1
rusty-cart/backend/: Cargo.toml
rusty-cart/backend/src/: main.rs  routers.rs
rusty-cart/frontend/: Cargo.toml  Trunk.toml  index.html
rusty-cart/frontend/src/: app.rs  main.rs  models.rs  utils.rs
rusty-cart/frontend/src/components/: cart_item.rs  mod.rs  product_card.rs
rusty-cart/src/: main.rs  models.rs  routers.rs  state.rs
