[package]
name = "rusty-cart"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4" }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143" }
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14.27", features = ["full"] }
