[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14.27", features = ["full"] }
http = "0.2"
tower-http = { version = "0.5.1", features = ["cors"] }
